--- a/open_market_movil/pubspec.yaml
+++ b/open_market_movil/pubspec.yaml
@@ -47,6 +47,7 @@ flutter:
   uses-material-design: true
   assets:
     - assets/i18n/
+    - assets/imagenes/
   # To add assets to your application, add an assets section, like this:
   # assets:
   #  - images/a_dot_burr.jpeg
