--- a/open_market_movil/pubspec.yaml
+++ b/open_market_movil/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   flutter_bloc: ^3.2.0
   equatable: ^1.1.1
   rxdart: ^0.23.1
+  shared_preferences: ^0.5.6+3
   flutter_localizations:
     sdk: flutter
 
