--- a/open_market_movil/pubspec.yaml
+++ b/open_market_movil/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   equatable: ^1.1.1
   rxdart: ^0.23.1
   shared_preferences: ^0.5.6+3
+  cached_network_image: ^2.1.0+1
   flutter_localizations:
     sdk: flutter
 
